# text-generation-inference

./: .dockerignore  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  .redocly.lint-ignore.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile-compile-router  Dockerfile.bake-peft-into-container  Dockerfile.llamacpp  Dockerfile.neuron  Dockerfile.nix  Dockerfile.trtllm  Dockerfile_amd  Dockerfile_amd_nightly_no_patch  Dockerfile_amd_rocm60  Dockerfile_gaudi  Dockerfile_intel  Dockerfile_llamacpp  Dockerfile_llamacpp_cpuonly  Dockerfile_router  Dockerfile_trtllm  LICENSE  Makefile  README.md  _launcher.nix  _server.nix  crate-hashes.json  docker-compose.yml  entrypoint.sh  flake.nix  interaction.ipynb  quickstart.sh  router.nix  run.sh  rust-toolchain.toml  sagemaker-entrypoint.sh  (+4 more)
backends/gaudi/server/: .gitignore  Makefile  Makefile-awq  Makefile-exllamav2  Makefile-fbgemm  Makefile-flash-att-v2  Makefile-selective-scan  README.md  dill-0.3.7-patch.sh  dill-0.3.8-patch.sh  pyproject.toml  requirements.txt  requirements_cuda.txt
backends/llamacpp/: CMakeLists.txt  Cargo.toml  README.md  build.rs  make-gguf.sh  requirements-cpu.txt  requirements.txt
backends/llamacpp/.cargo/: config.toml
backends/llamacpp/cmake/: fmt.cmake  numa.cmake  spdlog.cmake
backends/llamacpp/csrc/: backend.cpp  backend.hpp  ffi.hpp
backends/llamacpp/offline/: main.cpp
backends/llamacpp/src/: backend.rs  lib.rs  llamacpp.rs  main.rs  quantize.rs  wrapper.h
backends/neuron/server/: Makefile  build-requirements.txt  pyproject.toml
backends/trtllm/: CMakeLists.txt  Cargo.toml  Dockerfile  README.md  build.rs
backends/trtllm/.devcontainer/: Dockerfile  (+1 more)
backends/v2/: Cargo.toml  build.rs
backends/vllm/: Cargo.toml
benchmark/: Cargo.toml  README.md
benchmark/src/: app.rs  event.rs  generation.rs  lib.rs  main.rs  table.rs  ui.rs  utils.rs
clients/python/: .gitignore  Makefile  README.md  pyproject.toml
csrc/: CMakeLists.txt
csrc/cmake/: fmt.cmake  nvshmem.cmake  spdlog.cmake  torch.cmake
csrc/common/: CMakeLists.txt
csrc/tgiccl/: CMakeLists.txt  TgiCclBackend.cpp  TgiCclBackend.hpp  test_tgiccl.cpp  tgiccl.hpp
integration-tests/: clean_cache.py  clean_cache_and_download.py  conftest.py  pyproject.toml  pytest.ini  requirements.txt
integration-tests/UNKNOWN.egg-info/: PKG-INFO  SOURCES.txt
integration-tests/gaudi/: capture_expected_outputs.py  test_gaudi_generate.py  test_model.py
integration-tests/models/: test_bloom_560m.py  test_bloom_560m_sharded.py  test_chat_llama.py  test_chat_llava_next.py  test_chat_stream_options.py  test_completion_prompts.py  test_compressed_tensors_w8a8_int.py  test_compressed_tensors_w8a8_int_dynamic_weight.py  test_compressed_tensors_w8an_fp.py  test_compressed_tensors_wna16_int.py  test_compressed_tensors_wna16_int_24.py  test_continue_final_message.py  test_flash_awq.py  test_flash_awq_gptq.py  test_flash_awq_sharded.py  test_flash_deepseek_v2.py  test_flash_falcon.py  test_flash_gemma.py  test_flash_gemma2.py  test_flash_gemma3.py  test_flash_gemma_gptq.py  test_flash_gpt2.py  test_flash_grammar_llama.py  test_flash_llama.py  test_flash_llama_chunking.py  test_flash_llama_exl2.py  test_flash_llama_fp8.py  test_flash_llama_fp8_kv_cache.py  test_flash_llama_gptq.py  test_flash_llama_gptq_marlin.py  test_flash_llama_marlin.py  test_flash_llama_marlin_24.py  test_flash_llama_prefix.py  test_flash_llama_prefix_flashdecoding.py  test_flash_logit_bias.py  test_flash_medusa.py  test_flash_mistral.py  test_flash_mixtral.py  test_flash_mixtral_awq.py  test_flash_mixtral_gptq.py  (+44 more)
integration-tests/neuron/: test_generate.py
kvrouter/: Cargo.toml
kvrouter/src/: lib.rs  main.rs  trie.rs
launcher/: Cargo.toml  build.rs
launcher/src/: env_cli.rs  env_runtime.rs  gpu.rs  lib.rs  main.rs  versions.rs
launcher/tests/: bloom_560m.json  integration_tests.rs  mt0_base.json
load_tests/: Makefile  benchmarks.py  common.js  docker-compose.yml  download_artifact.js  filter.py  load_test.py  long.js  long.py  long_prompt2.py  main.js  orca.py  parse_load_test.py  pyproject.toml  starcoder_load.js  tgi.js  ttft.py  vllm.js
load_tests/benchmarks/: engine.py  k6.py  main.js  test_k6.py  utils.py
router/: Cargo.toml  README.md  build.rs  req.json  rust-toolchain.toml
router/client/: Cargo.toml  build.rs
router/grpc-metadata/: Cargo.toml
router/src/: batcher.rs  chat.rs  config.rs  db.rs  decoder.rs  health.rs  infer.rs  kserve.rs  lib.rs  logging.rs  main.rs  main.rs.back  queue.rs  sagemaker.rs  server.rs  usage_stats.rs  validation.rs  vertex.rs
server/: .gitignore  Makefile  Makefile-awq  Makefile-eetq  Makefile-exllamav2  Makefile-fbgemm  Makefile-flash-att  Makefile-flash-att-v2  Makefile-flashinfer  Makefile-lorax-punica  Makefile-marlin  Makefile-selective-scan  Makefile-transformers  Makefile-triton  Makefile-vllm  README.md  bounds-from-nix.py  dill-0.3.7-patch.sh  fbgemm_remove_unused.patch  fix_torch90a.sh  hello.py  pyproject.toml  pyproject.toml.back  req.txt  requirements.txt  requirements_common.txt  requirements_cuda.txt  requirements_gen.txt  requirements_intel.txt  requirements_rocm.txt
server/bench/: mlp-compare.py
server/bloom_inference/: cache.py  cli.py  main.py  model.py  prepare_weights.py  server.py  shard_model.py  utils.py
server/custom_kernels/: setup.py
server/deepsparse/: deepsparse_causal_lm.py  deepsparse_model.py  deepsparse_queue.py  deepsparse_requests.py  deepsparse_router.py  deepsparse_service.py  router.py
server/exllama_kernels/: setup.py
server/exllamav2_kernels/: setup.py
server/marlin/: COPYRIGHT  setup.py
server/tests/: conftest.py  test_utils.py
server/text_generation/: cache.py  cli.py  server.py  tracing.py  utils.py
server/text_generation_server/: cache.py  cli.py  debug_backend.py  habana_quantization_env.py  input.json  interceptor.py  profiler.py  quant_linear.py  server.py  tgi_service.py
tgi/: Cargo.toml  Makefile  README.md  app.py  pyproject.toml  requirements.txt  text_generation_server
tgi/src/: lib.rs
tgi/tgi/: __init__.py
(+1069 files in other folders)
