[workspace]
members = [
  "benchmark",
  "backends/v2",
  "backends/v3",
  "backends/grpc-metadata",
  "backends/trtllm",
  "launcher",
  "router"
]
default-members = [
  "benchmark",
  "backends/v2",
  "backends/v3",
  "backends/grpc-metadata",
  # "backends/trtllm",
  "launcher",
  "router"
]
resolver = "2"

[workspace.package]
version = "2.3.1-dev0"
edition = "2021"
authors = ["Olivier Dehaene"]
homepage = "https://github.com/huggingface/text-generation-inference"

[workspace.dependencies]
base64 = "0.22.0"
tokenizers = { version = "0.20.0", features = ["http"] }
hf-hub = { version = "0.3.1", features = ["tokio"] }
metrics = { version = "0.23.0" }
metrics-exporter-prometheus = { version = "0.15.1", features = [] }
minijinja = { version = "2.2.0", features = ["json"] }
minijinja-contrib = { version = "2.0.2", features = ["pycompat"] }

[profile.release]
incremental = true

[profile.release-binary]
inherits = "release"
debug = 1
incremental = true
panic = "abort"

[profile.release-opt]
inherits = "release"
debug = 0
incremental = false
lto = "fat"
opt-level = 3
codegen-units = 1
